--- a/test/index.html
+++ b/test/index.html
@@ -14,21 +14,18 @@
 			</p>
 		</form>
 	</div>
-	<script type="text/javascript">
-	var define=function (name, deps, fn) {
-	  var commandManager=new (fn())(document.querySelector('.root'));
-	  commandManager.suscribe('myApp/button', function(event, params) {
-	  	alert(params['test']);
-	  });
-	  commandManager.suscribe('myApp/form', function(event, params, form) {
-	  	alert(params['test']+','+form[0].value);
-	  });
-	  commandManager.suscribe('myApp/random', function(event, params, button) {
-		  button.form.elements[button.form.elements.length-3].value=Math.random();
-	  });
-	};
-	define.amd=true;
-	</script>
 	<script type="text/javascript" src="../Commandor.js"></script>
+	<script type="text/javascript">
+  var commandManager=new Commandor(document.querySelector('.root'));
+  commandManager.suscribe('myApp/button', function(event, params) {
+  	alert(params['test']);
+  });
+  commandManager.suscribe('myApp/form', function(event, params, form) {
+  	alert(params['test']+','+form[0].value);
+  });
+  commandManager.suscribe('myApp/random', function(event, params, button) {
+	  button.form.elements[button.form.elements.length-3].value=Math.random();
+  });
+	</script>
 </body>
 </html>
